--- a/nic/accounts.php.example
+++ b/nic/accounts.php.example
@@ -1,6 +1,6 @@
 <?php
 return [
-    'subdomain1' => 'saltedPasswordHash1',
-    'subdomain2' => 'saltedPasswordHash2',
-    'subdomain3' => 'saltedPasswordHash3',
+    'remoteSystemName1' => 'saltedPasswordHash1',
+    'remoteSystemName2' => 'saltedPasswordHash2',
+    'remoteSystemName3' => 'saltedPasswordHash3',
 ];
